<resources>
    <string name="app_name">tasksto.do</string>
    <string name="login_heading">Logowanie</string>
    <string name="login_input_placeholder">Nazwa użytkownika</string>
    <string name="password_input_placeholder">Hasło</string>
    <string name="repassword_input_placeholder">Powtórz hasło</string>
    <string name="login_button">Zaloguj się</string>
    <string name="register_info">Nie posiadasz konta?</string>
    <string name="register_link">Zarejestruj się</string>
    <string name="register_heading">Rejestracja</string>
    <string name="login_info">Posiadasz już konto?</string>
    <string name="userBtn_desc">User</string>
    <string name="settingsBtn_desc">Settings</string>
    <string name="addTaskBtn_desc">Add task</string>
    <string name="taskstodo_logo_desc">tasksto.do Logo</string>
    <string name="backBtn_desc">Back</string>
    <string name="user_view_heading">Profil</string>
    <string name="logout_button">Wyloguj</string>
    <string name="listBtn_desc">To Do List</string>
    <string name="add_task_heading">Dodawanie zadania</string>
    <string name="add_task_input_placeholder">Nazwa zadania</string>
    <string name="add_task_btn">Dodaj zadanie</string>
    <string name="pick_date">Wybierz datę</string>
    <string name="tasks_list_heading">Lista zadań</string>
    <string name="tasks_to_do_heading">DO ZROBIENIA</string>
    <string name="tasks_ended_heading">UKOŃCZONE</string>
    <string name="task_name">Nazwa taska</string>
    <string name="task_date">Data taska</string>
</resources>