<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDark"
    tools:context=".SignUpActivity">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logoImg"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/logo_taskstodo" />

        <TextView
            android:id="@+id/RegisterHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/register_heading"
            android:textColor="@color/primary_text_color"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/loginInput_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:autofillHints="username"
            android:background="@drawable/custom_text_input"
            android:ems="10"
            android:hint="@string/login_input_placeholder"
            android:inputType="text"
            android:maxWidth="300dp"
            android:paddingStart="16dp"
            android:paddingTop="14dp"
            android:paddingEnd="16dp"
            android:paddingBottom="14dp" />

        <EditText
            android:id="@+id/passwordInput_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:autofillHints="password"
            android:background="@drawable/custom_text_input"
            android:ems="10"
            android:hint="@string/password_input_placeholder"
            android:inputType="textPassword"
            android:paddingStart="16dp"
            android:paddingTop="14dp"
            android:paddingEnd="16dp"
            android:paddingBottom="14dp" />

        <EditText
            android:id="@+id/rePasswordInput_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:autofillHints="password"
            android:background="@drawable/custom_text_input"
            android:ems="10"
            android:hint="@string/repassword_input_placeholder"
            android:inputType="textPassword"
            android:paddingStart="16dp"
            android:paddingTop="14dp"
            android:paddingEnd="16dp"
            android:paddingBottom="14dp" />

        <Button
            android:id="@+id/loginBtn_login"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:text="@string/register_link"
            android:textAllCaps="false"
            android:textColor="@color/colorDark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/login_info"
                android:textColor="@color/primary_text_color"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_login_sign_up"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/login_button"
                android:textAllCaps="false" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>