<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDark"
    tools:context=".HomeActivity">

    <LinearLayout
        android:id="@+id/bottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addBtn_bottomMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-35dp"
            android:clickable="true"
            android:contentDescription="@string/addTaskBtn_desc"
            android:focusable="true"
            android:src="@drawable/plus_icon"
            app:backgroundTint="@color/colorAccent"
            app:backgroundTintMode="screen"
            app:fabCustomSize="70dp"
            app:fabSize="normal"
            app:rippleColor="@color/colorDark"
            app:tint="@color/colorDark" />

        <LinearLayout
            android:id="@+id/bottomMenu_Buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <View
                android:id="@+id/border_bottomMenu"
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:background="@color/colorLight" />

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/bottomMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorDark"
                android:paddingVertical="10dp">

                <TableRow
                    android:id="@+id/bottomMenu_btns"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <ImageButton
                        android:id="@+id/userBtn_bottomMenu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#00FFFFFF"
                        android:contentDescription="@string/userBtn_desc"
                        android:padding="5dp"
                        android:src="@drawable/user_icon" />

                    <Space
                        android:layout_width="170dp"
                        android:layout_height="wrap_content" />

                    <ImageButton
                        android:id="@+id/tasksBtn_bottomMenu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#00FFFFFF"
                        android:contentDescription="@string/listBtn_desc"
                        android:padding="5dp"
                        android:src="@drawable/list_icon" />
                </TableRow>
            </com.google.android.material.bottomnavigation.BottomNavigationView>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>